syntax = "proto3";

package pb;

import "appointment.proto";
import "google/protobuf/timestamp.proto";

option go_package = "barbershop/src/pb";


message CreateAppointmentRequest{
    string appointment_id = 1;
    string customer_id = 2;
    string barber_id = 3;
    string service_id = 4;
    google.protobuf.Timestamp appointment_datetime = 5;
    int32 status = 6;
}

message CreateAppointmentResponse {
    Appointment appointment = 1;
}